
..
  Put new features here and also in 'doc/whatsnew/2.14.rst'



..
  Insert your changelog randomly, it will reduce merge conflicts
  (Ie. not necessarily at the end)


What's New in Pylint 2.13.1?
============================
Release date: TBA

* Fix a regression in 2.13.0 where ``used-before-assignment`` was emitted for
  the usage of a nonlocal in a try block.

  Fixes #5965


What's New in Pylint 2.13.0?
============================
Release date: 2022-03-24

* Add missing dunder methods to ``unexpected-special-method-signature`` check.

* No longer emit ``no-member`` in for loops that reference ``self`` if the binary operation that
  started the for loop uses a ``self`` that is encapsulated in tuples or lists.

  Ref PyCQA/astroid#1360
  Closes #4826

* Output better error message if unsupported file formats are used with ``pyreverse``.

  Closes #5950

* Fix pyreverse diagrams type hinting for classmethods and staticmethods.

* Fix pyreverse diagrams type hinting for methods returning None.

* Fix matching ``--notes`` options that end in a non-word character.

  Closes #5840

* Updated the position of messages for class and function defintions to no longer cover
  the complete definition. Only the ``def`` or ``class`` + the name of the class/function
  are covered.

  Closes #5466

* ``using-f-string-in-unsupported-version`` and ``using-final-decorator-in-unsupported-version`` msgids
    were renamed from ``W1601`` and ``W1602`` to ``W2601`` and ``W2602``. Disabling using these msgids will break.
    This is done in order to restore consistency with the already existing msgids for ``apply-builtin`` and
    ``basestring-builtin`` from the now deleted python 3K+ checker. There is now a check that we're not using
    existing msgids or symbols from deleted checkers.

  Closes #5729

* The line numbering for messages related to function arguments is now more accurate. This can
  require some message disables to be relocated to updated positions.
