@@ -547,3 +547,8 @@ Other Changes
 * Output better error message if unsupported file formats are used with ``pyreverse``.
 
   Closes #5950
+
+* Avoid emitting ``raising-bad-type`` when there is inference ambiguity on
+  the variable being raised.
+
+  Closes #2793
