@@ -25,6 +25,10 @@ Release date: TBA
 
   Fixes #5965
 
+* Avoid emitting ``raising-bad-type`` when there is inference ambiguity on
+  the variable being raised.
+
+  Closes #2793
 
 What's New in Pylint 2.13.0?
 ============================
